uniswap link fix and addition of scrollbar on buy modal

--- a/src/styles/1-basics/_global.sass
+++ b/src/styles/1-basics/_global.sass
@@ -15,3 +15,8 @@ body
 
 a
     text-decoration: none
+
+@media screen and ( max-width: 450px )
+    body::-webkit-scrollbar
+        display: none
+    
