--- a/src/styles/2-components/_buymodal.sass
+++ b/src/styles/2-components/_buymodal.sass
@@ -1,14 +1,20 @@
+.buy-modal-container
+    overflow-y: initial !important
+    // overflow-x: hidden !important
+
+
 .buy-modal
     width: 334px
     margin-left: auto
     margin-right: auto
+    // overflow: scroll !important
     outline: none  //this is to hide focused outline on BuyModal//
     .MuiCard-root
         margin-left: auto
         margin-right: auto
         width: 334px
         height: 470px
-        margin-top: 75px
+        margin-top: 95px
         background: linear-gradient(to bottom right, #343434, #151515)
         border-radius: 10px
         text-align: center
@@ -45,3 +51,11 @@
         button
             margin-top: 30px
             filter: none
+
+//to make BuyModal look better on mobile -same size as other cards
+@media screen and ( max-width: 450px )
+    .buy-modal
+        overflow: scroll
+       
+            
+    
